@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install prepare setup
+DEPEND=mpi? ( virtual/mpi ) sci-libs/voro++ virtual/fortran
+DESCRIPTION=Large-scale Atomic/Molecular Massively Parallel Simulator
+EAPI=5
+HOMEPAGE=http://lammps.sandia.gov/
+IUSE=doc examples gzip lammps-memalign mpi static-libs
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=mpi? ( virtual/mpi ) sci-libs/voro++ virtual/fortran
+SLOT=0
+SRC_URI=http://lammps.sandia.gov/tars/lammps-14Jun14.tar.gz
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=3c95925c7d339216f2d3c5f1e161860e
