@@ -5,6 +5,7 @@ DIST lammps-10Mar14.tar.gz 58558593 SHA256 019374cd421451e1e8bb03da4626f0d7c8789
 DIST lammps-12Feb14.tar.gz 58143004 SHA256 31f3dcc33524d56405c06306c4ef02fc4d41d72dc0b7ac3cd9ef033f42e08c3d SHA512 525b592e3b4779fffa7a96a92d6972b1bfed8b3727746b6065c9743628421aaf4fa8ba6e72d891c2c6f016f776b9155bdff9b8dfeb8ed4dec164b334253255a2 WHIRLPOOL e15a2b56ee2918a478c979239565ad01346b60d026f2a5a6051b339f08e9328c0940767843b7fd08aaa225d097fe254d0cebbd07902671404874b9d63c91916f
 DIST lammps-12Mar14.tar.gz 58562523 SHA256 7575cdf8d2edf0429804d2d1d523c24921fe4e9eb4276bcfc5bb3f3cc480ba41 SHA512 a91e9ce5f0de0c16383b4f4d53c1ada2dca1018458c0e67a91a70df8a50cb14a52dc1e222d97af8119ad0d7c75bb01052d10be00b330ba310f45d76a5706ce49 WHIRLPOOL fb755fe7cf756c54a8843eefc5fc6420006ef6903dc049d88ca145432e8bb3eb4ac8b83360d8d138d02c2fbd967c889d7d7aaf79ee78cce736e54fcb5276155f
 DIST lammps-14Feb14.tar.gz 58547063 SHA256 188aa10c8984457e5559c30396ef56a0af51c69242b6b1ac10afa29b11ace4d9 SHA512 9fea6054e507eebc3eb41e7a6685d91bd58afd4b4c4eac692bf21bfadf48d34dfe6143d1775be89badfcb3ef5ec5a81e15c06797ac055cdf149f8139c868a0f7 WHIRLPOOL 7460b93649e9c3a6e0648e6368291205e97796b536a7b51ef59766d9db65ef7b8c2a43f24194980762c9c5b2b896d75b13c14e1350ea344fc46075269c87b098
+DIST lammps-14Jun14.tar.gz 64597109 SHA256 cf7d492862c7bbb1865631b8abce34ea8b5edac17a573c8924c4f9b885fccac3 SHA512 fb0d5d58c1abd402d0aa311156f023af9579793b6606f5c449f5bf0b298dc77a0c68198dc2898d9d8f0f84b24bd84fec3d60b1549d60446152b9e18d5f217608 WHIRLPOOL 7336cb8f57aa856ae7b8ca77bbdfb78df9c2a4fd229f58884c302e88dd75aa53c567c22fbdc8c87af032df264dbdd222d23143b23ba5a84dd8e94f5a7a260838
 DIST lammps-14Mar14.tar.gz 58562398 SHA256 679378e2cb2b44a93be671ee7c0f14f297c593511da72e70933e1349131abd26 SHA512 0289dc16795b89c2167eb5a9be0243b56a33ee1976dae6ce57a486ffe574cd12a6904bd36e76983e45126a3356b8d09407f44afc1c1ef0f28af76500901f3e7a WHIRLPOOL 54a6d99806fc5472cd13e26a506f2595cb45187d5481c99208747f8357461f2e9dfb3654804d3f71f8a3d1a37eb8d82688bd970a61e27ad951eab1360239f75b
 DIST lammps-1Feb14.tar.gz 57811478 SHA256 2d01ca4f2c52c18a9a95866f558b3f3857b22662415cb44fa16a5be4dd5bfe44 SHA512 aa84766d19d7f9f753792d6c3a9ba9b37faa671b4ae06ae89be6d3485a064326c79dc351cb784e6a03f5e4e046885a791274a64899ef117dd395e583eac13f3c WHIRLPOOL 4921525762c5842fe7bb96420db26553bf2ea3d91bfda52d2a9fad57f205487fe772c878d83e5b4ae146507e3a90509a4ff0b5628ebfda9a5dde82b8b3a95b3b
 DIST lammps-20Mar14.tar.gz 58582788 SHA256 cb2fce0cfb0066833bfe2ff5d9a3b55e83bf171b794abadd8eb755f14d05e302 SHA512 bbb5d92bfd8357137f8b85a4fe459c1fe0c8fbd84d3d4267b2109e56673c651e37b92b672762a91c9b535115810fbd542a9d8c4288e45328e23e4b5001258549 WHIRLPOOL b9600147aac14d8b0ad5437f70da042acc0895e116cbd819bc3031c26b7a8f2de34298d6ef8b49a169c475799537c3e7604f9b9788bb2f65f271dc46c56a7c7b
@@ -21,12 +22,13 @@ EBUILD lammps-20140310.ebuild 4230 SHA256 ac5aa1bf973aa3ca068fd27a387e80e01758b1
 EBUILD lammps-20140312.ebuild 4149 SHA256 ab5c63974c020f573b3f6d51b237acb1b69732ab178c8d183e48a6189035c7f9 SHA512 10d815fdcae8363e45bf53359c397e161e9dd07c2ab02b596c9c6e0fe09a1743a301f99a5055bd8b9893a2c6e3ea7c129532ebe2669229b8da6900186eb233c9 WHIRLPOOL 6a919eecd4c77c5cc1564799a2871e932ca2b252f831b2726c529a29ad78c6bfe8d0cc87baabbbbaae470ef137a6771e34185a4608066b1b60c52f452076381d
 EBUILD lammps-20140314.ebuild 4149 SHA256 96eb57bbe13d1d51222fa1edd9827c79c00e7d2a7f16b3fdf0b0774e9b2c1024 SHA512 627984a4b1c63039c3da6e5eeb7bec67eee548562f661f30ae0114a02bc0cf9f5722478dbfdb630375c1873432d30df6fcab75668b410a27d9f7535a244559ed WHIRLPOOL c9e89e0af049334ddd082bae001102a11bc5f5a468d15762270b03977254450ac3ee52fa5f225fbd5d07aedb0ef7bf4143c1d2680be586038549fe410fb88e67
 EBUILD lammps-20140320.ebuild 4625 SHA256 48c1ad720a757c0a705a2d5bd4606f5435a0d3e14e6bc4a7360f075369cde980 SHA512 c122dcc05362eba440e532c3d55435cc4493af6669638ed897171f6a3df60eda9ba49a6251f2b9959f0fe32361eeeddf90f1b4c589ec7f07529c3609883325af WHIRLPOOL f652faa83734b0f65dad4f836efbe3378db8fb837e3a0fc109e410fbce2864f1ac1c907f69d8a9ed0a70fca5198ddf5dcbb9e1b2035f1cb327fbea6251bbafc1
-MISC ChangeLog 5615 SHA256 2e66b68da9f765b200170e835d4c865bd61f6fe5f66b7546e1a36fba2041307a SHA512 fe6b5a53fed0e1df6192926a46848c6045344c56245bec7ee0468669f4a877686c40f462ac9b2d201531194c22127048969e98f905a1dfa26af5680e63fa990c WHIRLPOOL ba45ba04d17b18de488fa508bf1134ef3f292e6fe6f4de972c3a0803582e92381ff5ca25d33e4729cc2daceea0e3fe4c8f8c507eba934caf1b6003d2ee4f4935
+EBUILD lammps-20140614.ebuild 4687 SHA256 0aa9352004a2628c6d9fe1f5389750e4f0e825a608382846196bbf54aeceeff9 SHA512 79e1c338af61634db76905c93e6d477c9388d2944a3c1a62a9285ef8225e506a356bbc2e38305adcd849c70a5b46ccd947755d2213fd52de5af579e2134461b7 WHIRLPOOL 9b5f94236f7f3296a70bedd2a2de84131f841609ec346069c35a2cce4ce7f43d1ec44b20fc8f740a0e04497fd82c6b96ed5d6fb5cab1b6493af0ff195eb5e8a7
+MISC ChangeLog 5771 SHA256 27f32ec00af78eaa11e28892f48e67c734bd7dcb3363f2ba6ebba5799e16f88d SHA512 99e7ac6f8e388cd3f66a43cd09a3ae1883ba9a451baa8eeddab489c3b2a2ef1205015b58fe2dc2f2788898cf0d7b6bcba25d74d84e57856ca51c0130d3db7860 WHIRLPOOL ba42687878dad5b4b3dfcc2300a28b588716bbd319607466d293f4945f79bfbc1128503a0e512437a06e345f49b18dc60fd1fd93f424fb4a7698de05877a2db8
 MISC metadata.xml 1584 SHA256 4d06db7368b155db1484a6c0792a366b37541260e700248ccf542e5fe28ffbc7 SHA512 b0bbd1fdd37e35ccc0cd4d34bb9afa09910b56a14daa078148aefcce4dc13408c1a5d5a40b865a37bc917764f5b91e266256b9ca83e0f8009859d955b68fe6a8 WHIRLPOOL ff65f1a03910b4fa5758d5537d898c733971e5f339dcd8150bc1596dfcf490b4de2be7f520405a47274e1e9827eddc3d8a1324f2f169d575d1e4584dc01e9787
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlM5XycACgkQf15tZKyRylJ4ZgCgrdsS4ghPEtFNrtKodgXSXuNx
-yIsAnihM0eebXxzrLUEyHQ6Imnua/OPx
-=9eoX
+iEYEAREIAAYFAlOiWlEACgkQf15tZKyRylIM6ACfdTtxRMOh1NKHvFIklJKy9BrO
+lrcAnRp2ZnNB9qt+k/gglZiwdvt1Uhzq
+=xR3j
 -----END PGP SIGNATURE-----
