@@ -1,6 +1,11 @@
 # ChangeLog for sci-physics/lammps
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.30 2014/03/31 12:27:14 nicolasbock Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-physics/lammps/ChangeLog,v 1.31 2014/06/19 03:34:19 nicolasbock Exp $
+
+*lammps-20140614 (19 Jun 2014)
+
+  19 Jun 2014; Nicolas Bock <nicolasbock@gentoo.org> +lammps-20140614.ebuild:
+  sci-physics/lammps-20140614: Version bump.
 
 *lammps-20140320 (31 Mar 2014)
 
